; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/comedi/drivers/extr_comedi_test.c_fake_waveform.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/comedi/drivers/extr_comedi_test.c_fake_waveform.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.comedi_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i16 (%struct.comedi_device*, i32, i32, i32)* @fake_waveform to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal zeroext i16 @fake_waveform(%struct.comedi_device* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i16, align 2
  %6 = alloca %struct.comedi_device*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.comedi_device* %0, %struct.comedi_device** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %10 = load i32, i32* %7, align 4
  switch i32 %10, label %21 [
    i32 0, label %11
    i32 1, label %16
  ]

11:                                               ; preds = %4
  %12 = load %struct.comedi_device*, %struct.comedi_device** %6, align 8
  %13 = load i32, i32* %8, align 4
  %14 = load i32, i32* %9, align 4
  %15 = call zeroext i16 @fake_sawtooth(%struct.comedi_device* %12, i32 %13, i32 %14)
  store i16 %15, i16* %5, align 2
  br label %27

16:                                               ; preds = %4
  %17 = load %struct.comedi_device*, %struct.comedi_device** %6, align 8
  %18 = load i32, i32* %8, align 4
  %19 = load i32, i32* %9, align 4
  %20 = call zeroext i16 @fake_squarewave(%struct.comedi_device* %17, i32 %18, i32 %19)
  store i16 %20, i16* %5, align 2
  br label %27

21:                                               ; preds = %4
  br label %22

22:                                               ; preds = %21
  %23 = load %struct.comedi_device*, %struct.comedi_device** %6, align 8
  %24 = load i32, i32* %8, align 4
  %25 = load i32, i32* %9, align 4
  %26 = call zeroext i16 @fake_flatline(%struct.comedi_device* %23, i32 %24, i32 %25)
  store i16 %26, i16* %5, align 2
  br label %27

27:                                               ; preds = %22, %16, %11
  %28 = load i16, i16* %5, align 2
  ret i16 %28
}

declare dso_local zeroext i16 @fake_sawtooth(%struct.comedi_device*, i32, i32) #1

declare dso_local zeroext i16 @fake_squarewave(%struct.comedi_device*, i32, i32) #1

declare dso_local zeroext i16 @fake_flatline(%struct.comedi_device*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
